@@ -1,2 +1,3 @@
 uri = event
 sync = two-way
+type = calendar:text/calendar!
