@@ -1,2 +1,3 @@
 uri = task
 sync = two-way
+type = todo:text/calendar!
